<resources>
    <string name="app_name">Ultimate Shopping</string>
    <string name="app_title">Ultimate Shopping</string>

    <string name="listItemsBtn_name">List All Items</string>
    <string name="addItemBtn_name">Add Item</string>
    <string name="deleteItemBtn_name">Delete Item</string>
    <string name="deleteAllItemsBtn_name">Delete All Items</string>
    <string name="searchBtn_name">Search</string>

    <string name="whatTextView">What Item?</string>
    <string name="whereTextView">Where?</string>

    <string name="addedItemToast">Item Added! :)</string>
    <string name="deletedItemToast">Item Deleted!</string>
    <string name="deletedAllItemsToast">All items deleted!</string>
    <string name="noItemsToast">No More Items!</string>
    <string name="pleaseAddItemToast">Please fill in an item</string>
    <string name="pleaseAddLocationToast">Please fill in a location</string>

    <string name="what_list">What</string>
    <string name="where_list">Where</string>

    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>

    <!-- Strings for the toolbar -->
    <string name="add_item">Add Item</string>
    <string name="show_subtitle">Show Count</string>
    <string name="hide_subtitle">Hide Count</string>
    <string name="delete_all">Clear List</string>
    <string name="share_list">Share List</string>
    <string name="add_items">DEV: Add Items</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>

    <!-- Our report strings, used for Share Item List -->
    <string name="list_report">%1$! The shopping list contains these items:
        %2$.</string>
    <string name="list_report_subject">Ultimate Shopping List Report</string>
    <string name="send_report">Send list via</string>
</resources>