<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp" >

    <EditText
        android:id="@+id/add_shop"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

</LinearLayout>