<?xml version="1.0" encoding="utf-8"?>
<!-- Constraint Layouts are nifty. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:padding="8dp"
    android:background="@drawable/button_round"
    android:gravity="center">

    <!-- TextView that shows the Item Number-->
    <TextView
        android:id="@+id/item_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="6dp"
        android:text="N"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView that shows the Item Name-->
    <TextView
        android:id="@+id/item_what"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/what_list"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteItemImgBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/item_no"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView that shows the Item Location-->
    <TextView
        android:id="@+id/item_where"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:padding="8dp"
        android:text="@string/where_list"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteItemImgBtn"
        app:layout_constraintStart_toEndOf="@+id/item_no"
        app:layout_constraintTop_toBottomOf="@+id/item_what" />

    <!-- ImageButton used to display a delete icon, push to delete the item -->
    <ImageButton
        android:id="@+id/deleteItemImgBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_delete_button_icon"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
